<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.adapter.LoginPageActivity"
    android:background="@drawable/background__1_">

    <TextView
        style="@style/cabecera_negro"
        android:id="@+id/cabecerapag3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/txt_cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_nombre_pg4"
        style="@style/cabecera_negro"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/negro"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/txt_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecerapag3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lbl_nombre_pg4"
            style="@style/label_negro"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:height="40dp"
            android:alpha="0.2494"
            android:background="@color/white"
            android:text="@string/ingresa_email"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_pass"
        style="@style/cabecera_negro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:hint="contraseña"
        android:textColorHint="@color/negro"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabecerapag3"
        tools:ignore="DuplicateIds">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_p2"
            style="@style/label_negro"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:alpha="0.2494"
            android:background="@color/white"
            android:text="@string/ingresa_contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/olvidacontraseña"
        android:textColor="@color/celeste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/btn_4"
        style="@style/boton_celeste"
        android:layout_width="345dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:background="@color/celeste"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pass"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/jua"
        android:text="Ya tienes cuenta?"
        android:textColor="@color/celeste"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@string/ya_tienes_cuenta"
        app:layout_constraintVertical_bias="0.823" />


</androidx.constraintlayout.widget.ConstraintLayout>